[package]
name = "booted"
version = "0.3.3"
edition = "2024"
license = "MIT"
keywords = ["statistics"]
categories = ["science"]
description = "A library for bootstrapping estimators on arbitrary data structures."

[dependencies]
bon = "3.8.2"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = { version = "1.11.0" }
serde = { version = "1.0.228", features = ["derive"] }
