[package]
name = "booted"
version = "0.6.0"
edition = "2024"
license = "MIT"
keywords = ["statistics"]
categories = ["science"]
description = "A library for bootstrapping estimators on arbitrary data structures."

[features]
default = ["indicatif"]
indicatif = ["dep:indicatif"]

[dependencies]
indicatif = { version = "0.18.4", features = ["rayon", "improved_unicode"], optional = true }
rand = { version = "0.9.2", features = ["small_rng"] }
rand_distr = "0.5.1"
rayon = { version = "1.11.0" }
serde = { version = "1.0.228", features = ["derive"] }
